[iOS] Current time display should be right-aligned https://bugs.webkit.org/show_bug.cgi?id=145163 rdar://problem/21014339
Reviewed by Eric Carlson.

* Modules/mediacontrols/mediaControlsiOS.css: Use flex-start and flex-end
instead of right and left, similar to the Mac controls.
(video::-webkit-media-controls-current-time-display):
(video::-webkit-media-controls-time-remaining-display):


Canonical link: https://commits.webkit.org/163170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184564 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/Modules/mediacontrols/mediaControlsiOS.css
+++ b/Source/WebCore/Modules/mediacontrols/mediaControlsiOS.css
@@ -413,14 +413,14 @@ audio::-webkit-media-controls-time-remaining-display {
 audio::-webkit-media-controls-current-time-display,
 video::-webkit-media-controls-current-time-display {
     min-width: 32px;
-    -webkit-justify-content: right;
+    -webkit-justify-content: flex-end;
     padding-right: 6px;
 }
 
 audio::-webkit-media-controls-time-remaining-display,
 video::-webkit-media-controls-time-remaining-display {
     min-width: 38px;
-    -webkit-justify-content: left;
+    -webkit-justify-content: flex-start;
     padding-left: 6px;
     margin-right: 6px;
 }
